frontend: fix issue with log-view being too tall

--- a/frontend/scss/main.scss
+++ b/frontend/scss/main.scss
@@ -190,10 +190,11 @@ div #command-select {
 // Log view style.
 //----------------------------------------------------------------------------
 .scrollable {
-  height: 100%;
+  height: calc(100% - 342px);
   word-break: break-all;
   white-space: pre;
   overflow: auto;
+  padding-bottom: 300px; 
 }
 
 .log-view {
